# d2s-cli

./: .gitignore  Dockerfile  README.md  d2s.py  doap-project.ttl  publish.Dockerfile  publish_pip.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  python-publish.yml  test-publish.yml  test.yml
conda/: meta.yaml
conda/d2s/: meta.yaml
d2s/: __init__.py  __main__.py  cli.py  generate_metadata.py  generate_shacl.py  graph_builder.py  process_datasets.py  sparql_operations.py  utils.py
d2s/archived_queries/: 1_1_global_stats_counts.rq  1_8_count_graphs.rq  2_6_count_subject_linked_to_object_by_property.rq  bio2rdf_dataset_links.rq
d2s/queries/: 1_4_count_distinctProperties.rq  1_5_count_distinctObjects.rq  1_6_count_distinctClasses.rq  1_7_count_distinctLiterals.rq  2_6_count_subject_object_links.rq
d2s/queries/bio2rdf/: 1_1_count_namespaces.rq
d2s/queries/hcls/: 1_1_count_triples.rq  1_2_count_entities.rq  1_3_count_distinctSubjects.rq  2_2_count_instances_per_classes.rq  2_3_count_instances_linked_to_property.rq  2_4_count_objects_linked_to_property.rq  2_5_count_literal_linked_to_property.rq  2_6_count_subject_object_links.rq
d2s/queries/lslod/: queries.rq
d2s/templates/: process-dataset.yml
d2s/templates/dataset/: README.md  dataset-yourdataset.jsonld  mapping.yarrr.yml  mappings.yarrr.yml  prepare.sh  preprocessing.py  process-dataset.ipynb
d2s/templates/project/: .gitignore  README.md  d2s.yml  requirements.txt
d2s_cli/: cli.py
resources/: d2s-config.schema.json
tests/: test_d2s.py  test_d2s_cli.py
(+6 files in other folders)
